--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0.95"
 clap = { version = "4.5.23", features = ["derive", "env"] }
 git2 = "0.19.0"
+minisign = "0.7.9"
 rpassword = "7.3.1"
 zeroize = "1.8.1"
 
